[gd_scene load_steps=9 format=2]

[ext_resource path="res://imports/dart/spint_ani1.png" type="Texture" id=1]
[ext_resource path="res://imports/dart/spint_ani2.png" type="Texture" id=2]
[ext_resource path="res://imports/dart/spint_ani4.png" type="Texture" id=3]
[ext_resource path="res://imports/dart/spint_ani3.png" type="Texture" id=4]
[ext_resource path="res://hitandhurt/hitbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Weapons/dart.gd" type="Script" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 36.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 9.0

[node name="dart" type="Node2D"]
script = ExtResource( 6 )
speed = 600
stay_time = 0.2

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 3
playing = true

[node name="hitbox" parent="." instance=ExtResource( 5 )]
collision_layer = 0
collision_mask = 9
damage = 7

[node name="CollisionShape2D" parent="hitbox" index="0"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="stay_timer" type="Timer" parent="."]
one_shot = true

[node name="readyTImer" type="Timer" parent="."]
wait_time = 0.002
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="stay_timer" to="." method="_on_stay_timer_timeout"]
[connection signal="timeout" from="readyTImer" to="." method="_on_readyTImer_timeout"]

[editable path="hitbox"]
